2004-09-22  Jim Blandy  <jimb@theseus.home>

	* thread-db.c (thread_db_detach, thread_db_set_gen,
	thread_db_thread_id): Make these functions static.

2004-09-13  Jim Blandy  <jimb@theseus.home>

	* solaris-target.c (solaris_detach, solaris_attach): Change
	"linux" to "solaris".

2004-08-11  Corinna Vinschen  <vinschen@redhat.com>

	* linux-target.c (linux_write_reg): Print process->pid in case of
	an error.

2004-07-19  Kevin Buettner  <kevinb@redhat.com>

	* server.c (main): Set ``server_quit_p'' when debugged process
	exits or terminates.

2004-06-03  Kevin Buettner  <kevinb@redhat.com>

	* server.c (main): Ensure that thread related realtime signals
	are ignored.

2004-04-20  Kevin Buettner  <kevinb@redhat.com>

	* thread-db.c (lookup_sym): New function.
	(thread_db_open): Print diagnostic message for failed dlopen()
	call.  Call lookup_sym() which will print diagnostic for failed
	dlsym() call.

2004-04-20  Kevin Buettner  <kevinb@redhat.com>

	* server.c (main): Ignore realtime signals.

2004-04-05  Kevin Buettner  <kevinb@redhat.com>

	* linux-target.c (reginfo) [FRV_LINUX_TARGET]: Add support for
	registers fsr0, acc0-acc7, accg0-accg7, msr0, msr1, gner0, gner1,
	fner0, and fner1.

2004-03-19  Kevin Buettner  <kevinb@redhat.com>

	* ptrace-target.c (ptrace_exit_program): Cause main loop to exit.
	* server.c (sys/types.h, sys/stat.h, fcntl.h, string.h, unistd.h)
	(ctype.h, termios.h): Include.
	(close_device, tty_raw, invalid_speed, parse_speed): New functions.
	(speed_table): New static global.
	(usage): Update usage message.
	(main): Add support for connecting to serial devices.

2004-03-10  Kevin Buettner  <kevinb@redhat.com>

	* linux-target.c (enum regset): Add constant OTHERREGS.
	(struct peekuser_pokeuser_reginfo): Add new field,
	alternate_register_read_write_method.  Adjust all initializers
	accordingly.
	(frv_fdpic_loadmap_addresses): New function.
	(PTRACE_GETFDPIC, PTRACE_GETFDPIC_EXEC, PTRACE_GETFDPIC_INTERP):
	Define.